# spineax

./: CMakeLists.txt  README.md  pyproject.toml
examples/cudss/: composability.py  datatypes.py  outputs.py  solver_types.py
src/spineax/baspacho/: __init__.py
src/spineax/cudss/: baspacho_solve.cpp  batch_solve.cpp  pseudo_batch_solve.cu  single_solve.cpp  single_solve_re.cpp  solver.py  solver_re.py
