[build-system]
requires = [
    "scikit-build-core >= 0.5", 
    "nanobind", 
    "jax[cuda12]", 
    "nvidia-cudss-cu12",
    "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "spineax"
version = "0.0.2"
requires-python = ">=3.10"
authors = [
    {name = "John Viljoen"}
]
dependencies = [
    "jax[cuda12]", # gives us XLA, CUDART, nvcc...
    "nvidia-cudss-cu12", # cudss is in pip!!! how helpful
    "ninja", # for hot re-building on editable install
    "jaxtyping",
    "equinox",  # required by solver.py
]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
editable.rebuild = true # in an editable install rebuild upon changes

[tool.setuptools.packages.find]
where = [
    "src"
]

